feat: Change ids

--- a/ios/Import_photo_action_flutter/Import_photo_action_flutter.entitlements
+++ b/ios/Import_photo_action_flutter/Import_photo_action_flutter.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.lucas-goldner.goldenIosExtensions</string>
+		<string>group.com.lucas-goldner.golden-ios-extensions</string>
 	</array>
 </dict>
 </plist>
