--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   home_widget: ^0.5.0
+  quick_actions: ^1.1.0
 
 dev_dependencies:
   flutter_test:
