--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   home_widget: ^0.5.0
   quick_actions: ^1.1.0
+  flutter_callkit_incoming: ^2.5.2
 
 dev_dependencies:
   flutter_test:
